--- a/x10.man/paper/LO.tex
+++ b/x10.man/paper/LO.tex
@@ -2,13 +2,13 @@
 \quad\num{1}class Owned(Owned owner) \{ \}
 \quad\num{2}
 \quad\num{3}class List(Owned valOwner
-\quad\num{4}         : owner contains valOwner)
+\quad\num{4}         : owner owns valOwner)
 \quad\num{5}    extends Owned \{
 \quad\num{6}  Owned(valOwner) head;
 \quad\num{7}  List(this, valOwner) tail;
 \quad\num{8}
-\quad\num{9}  List(:owner=o, valOwner=v, o contains v)
-\quad\num{10}      (Owned o, Owned v: o contains v) \{
+\quad\num{9}  List(:owner=o, valOwner=v, o owns v)
+\quad\num{10}      (Owned o, Owned v: o owns v) \{
 \quad\num{11}    super(o);
 \quad\num{12}    property(v);
 \quad\num{13}  \}
