--- a/x10.man/paper/abstract.tex
+++ b/x10.man/paper/abstract.tex
@@ -15,7 +15,7 @@ dependent types to nominally typed OO languages such as Java, \Xten{}
 and Scala. The framework is parametric on an underlying constraint
 system {\cal C}. Classes and interfaces are associated with {\em
 properties} (= final instance fields). A type {\tt C(:c)} names a class
-or interface {\tt C} and a {\em constraint} {\tt c} on
+or interface {\tt C} and a {\em constraint} {\tt c} on the
 properties of {\tt C} and in-scope final variables.  Constraints
 may also be associated with class definitions (representing
 class invariants) and with method and constructor definitions
